  Added a few unit tests
  SizedDocumentFilter bug fixed
  EntityApplicationPanel.getNorthToolbar() replaced with initializeNorthPanel()
  EntityComboBoxModel.getSelectCondition() added
  EntityComboBoxModel.performQuery() no longer takes selectCondition parameter
  ColumnConditionModel.setLikeValue() parameter type changed from Comparable to Object
  Some Java 8 related improvements based on IntelliJ inspections
  SizedDocumentFilter bug fixed
  Condition.Provider interface added, for dynamic conditions
  PropertyConditionModel implements the above
  EntityLookupModel.setAdditionalLookupCondition() changed to setAdditionalConditionProvider()
  EntityComboBoxModel.setSelectCondition() changed to setSelectConditionProvider()
  EntityTableConditionModel.setAdditionalTableCondition() changed to setAdditionalTableConditionProvider()
  DefaultEntityEditModel no longer sets the default values by calling setEntity(null) in constructor since it doesn't play well with an overridden DefaultEntityEditModel.getDefaultValue()
  EntityEditPanel and EntityEditView now set default values in constructor by calling editModel.setEntity(null)
  ObservableEntityList.hasSelectionModelBeenSet() added, used in FXEntityListModel
  CompletionDocument bug fixed, hitBackspace was not reset during remove()
  Copyright updated
  EntityEditPanel and EntityEditView no longer set default values in constructor by calling editModel.setEntity(null), wrong place, wrong time since it resets the EditModel entity state
  DefaultEntityModel now calls editModel.setEntity(null) in constructor
  EntityConditions.getInList() bug fixed, 'not in' did not work when the condition value count exceeded the in clause limit
  FilteredTablePanel.performSearch() now clears the selection when search string is not found
  ProgressWorker and ProgressDialog added
  ProgressWorker and ProgressDialog improved, UiUtil.runWithProgressBar() refactored
  ProgressWorker typo fixed