@@ -4,6 +4,8 @@
 package org.jminor.framework.model;
 
 import org.jminor.common.User;
+import org.jminor.common.Util;
+import org.jminor.framework.Configuration;
 import org.jminor.framework.db.EntityConnectionProvider;
 
 import java.util.ArrayList;
@@ -168,11 +170,18 @@ public abstract class DefaultEntityApplicationModel<M extends DefaultEntityModel
   }
 
   /**
-   * This method should load the domain model, for example by instantiating the domain model
-   * class or simply loading it by name
+   * This method loads the domain model by loading the class specified by {@link Configuration#CLIENT_DOMAIN_MODEL_CLASS}.
+   * Override to load the domain class manually.
+   * @throws IllegalArgumentException in case {@link Configuration#CLIENT_DOMAIN_MODEL_CLASS} is not available.
    * @throws ClassNotFoundException in case the domain model class is not found on the classpath
    */
-  protected abstract void loadDomainModel() throws ClassNotFoundException;
+  protected void loadDomainModel() throws ClassNotFoundException {
+    final String className = Configuration.getStringValue(Configuration.CLIENT_DOMAIN_MODEL_CLASS);
+    if (Util.nullOrEmpty(className)) {
+      throw new IllegalArgumentException("Domain class configuration value not found '" + Configuration.CLIENT_DOMAIN_MODEL_CLASS + "'");
+    }
+    Class.forName(className);
+  }
 
   /**
    * Called after a logout has been performed.
